[gd_scene load_steps=18 format=2]

[ext_resource path="res://bg.png" type="Texture" id=1]
[ext_resource path="res://board.png" type="Texture" id=2]
[ext_resource path="res://src/main.gd" type="Script" id=3]
[ext_resource path="res://assets/top-blank.png" type="Texture" id=4]
[ext_resource path="res://src/KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://assets/wood-bottom.png" type="Texture" id=6]
[ext_resource path="res://src/HTTPRequest.gd" type="Script" id=7]
[ext_resource path="res://src/HTTPRequest2.gd" type="Script" id=8]
[ext_resource path="res://src/Timer.gd" type="Script" id=9]
[ext_resource path="res://assets/top-eyeball.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=9]
radius = 36.734

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "eyes"
length = 2.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=1]
resource_name = "rotateshuriken"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "eyeseyes"
length = 2.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="SegmentShape2D" id=10]

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 963.5, 541.5 )
scale = Vector2( 1.38623, 1.03671 )
texture = ExtResource( 1 )

[node name="main-game-board" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -630.0
margin_top = -427.0
margin_right = 220.0
margin_bottom = 423.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="main-game-board"]
script = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="main-game-board/KinematicBody2D"]
position = Vector2( 546.667, 590 )
scale = Vector2( 0.65, 0.65 )
z_index = 8
texture = ExtResource( 10 )
hframes = 5
vframes = 2

[node name="Sprite" type="Sprite" parent="main-game-board/KinematicBody2D"]
position = Vector2( 546, 591 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 4 )

[node name="star" type="Area2D" parent="main-game-board/KinematicBody2D/Sprite"]
position = Vector2( -5.33337, -13.111 )
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="main-game-board/KinematicBody2D/Sprite/star"]
position = Vector2( 3.33331, 6.66669 )
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="main-game-board/KinematicBody2D"]
autoplay = "rotateshuriken"
anims/RESET = SubResource( 2 )
anims/eyes = SubResource( 4 )
anims/rotateshuriken = SubResource( 1 )

[node name="Timer" type="Timer" parent="main-game-board/KinematicBody2D"]
script = ExtResource( 9 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="main-game-board/KinematicBody2D"]
autoplay = "eyeseyes"
anims/RESET = SubResource( 6 )
anims/eyeseyes = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="main-game-board/KinematicBody2D"]
shape = SubResource( 10 )

[node name="Wood-bottom" type="Sprite" parent="."]
position = Vector2( 718.5, 1025.5 )
scale = Vector2( 1.0141, 1.40816 )
texture = ExtResource( 6 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="HTTPRequest2" type="HTTPRequest" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[connection signal="area_entered" from="main-game-board/KinematicBody2D/Sprite/star" to="main-game-board/KinematicBody2D" method="_on_star_area_entered"]
[connection signal="timeout" from="main-game-board/KinematicBody2D/Timer" to="main-game-board/KinematicBody2D" method="_on_Timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
